hard-gists/2942127/run.log
=== Docker Run Log for 2942127 ===
Started at: Mi 29. Okt 13:21:37 CET 2025

[2025-10-29 13:21:38] START: Running container for 2942127
[2025-10-29 13:21:38] SUCCESS: Container 2197355ca8be5d1c7ee078979ec33738fbaaebb66f6a0d5b13bc407f3384c178 started for 2942127
=== Container logs for 2942127 ===
  File "/snippet.py", line 40
    print "WARNING: FDS without ident? (%s)" % signat
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2942127 ===
[2025-10-29 13:21:40] INFO: Container 2197355ca8be5d1c7ee078979ec33738fbaaebb66f6a0d5b13bc407f3384c178 has stopped
